// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`installs skitch path sqitch install 1`] = `
Array [
  "deploy",
  "Makefile",
  "myproject.control",
  "package.json",
  "revert",
  "sqitch.conf",
  "sqitch.plan",
  "sql",
  "test",
  "test/utils",
  "test/utils/index.js",
  "verify",
]
`;

exports[`installs skitch path sqitch install 2`] = `
Array [
  "bootstrap-roles.sql",
  "docker-compose.yml",
  "Makefile",
  "myproject",
  "myproject/deploy",
  "myproject/Makefile",
  "myproject/myproject.control",
  "myproject/package.json",
  "myproject/revert",
  "myproject/sqitch.conf",
  "myproject/sqitch.plan",
  "myproject/sql",
  "myproject/test",
  "myproject/test/utils",
  "myproject/test/utils/index.js",
  "myproject/verify",
  "node_modules",
  "node_modules/skitch-ext-verify",
  "node_modules/skitch-ext-verify/deploy",
  "node_modules/skitch-ext-verify/deploy/procedures",
  "node_modules/skitch-ext-verify/deploy/procedures/verify_constraint.sql",
  "node_modules/skitch-ext-verify/deploy/procedures/verify_domain.sql",
  "node_modules/skitch-ext-verify/deploy/procedures/verify_extension.sql",
  "node_modules/skitch-ext-verify/deploy/procedures/verify_function.sql",
  "node_modules/skitch-ext-verify/deploy/procedures/verify_index.sql",
  "node_modules/skitch-ext-verify/deploy/procedures/verify_membership.sql",
  "node_modules/skitch-ext-verify/deploy/procedures/verify_policy.sql",
  "node_modules/skitch-ext-verify/deploy/procedures/verify_role.sql",
  "node_modules/skitch-ext-verify/deploy/procedures/verify_schema.sql",
  "node_modules/skitch-ext-verify/deploy/procedures/verify_security.sql",
  "node_modules/skitch-ext-verify/deploy/procedures/verify_table_grant.sql",
  "node_modules/skitch-ext-verify/deploy/procedures/verify_table.sql",
  "node_modules/skitch-ext-verify/deploy/procedures/verify_trigger.sql",
  "node_modules/skitch-ext-verify/deploy/procedures/verify_type.sql",
  "node_modules/skitch-ext-verify/deploy/procedures/verify_view.sql",
  "node_modules/skitch-ext-verify/Makefile",
  "node_modules/skitch-ext-verify/package.json",
  "node_modules/skitch-ext-verify/revert",
  "node_modules/skitch-ext-verify/revert/procedures",
  "node_modules/skitch-ext-verify/revert/procedures/verify_constraint.sql",
  "node_modules/skitch-ext-verify/revert/procedures/verify_domain.sql",
  "node_modules/skitch-ext-verify/revert/procedures/verify_extension.sql",
  "node_modules/skitch-ext-verify/revert/procedures/verify_function.sql",
  "node_modules/skitch-ext-verify/revert/procedures/verify_index.sql",
  "node_modules/skitch-ext-verify/revert/procedures/verify_membership.sql",
  "node_modules/skitch-ext-verify/revert/procedures/verify_policy.sql",
  "node_modules/skitch-ext-verify/revert/procedures/verify_role.sql",
  "node_modules/skitch-ext-verify/revert/procedures/verify_schema.sql",
  "node_modules/skitch-ext-verify/revert/procedures/verify_security.sql",
  "node_modules/skitch-ext-verify/revert/procedures/verify_table_grant.sql",
  "node_modules/skitch-ext-verify/revert/procedures/verify_table.sql",
  "node_modules/skitch-ext-verify/revert/procedures/verify_trigger.sql",
  "node_modules/skitch-ext-verify/revert/procedures/verify_type.sql",
  "node_modules/skitch-ext-verify/revert/procedures/verify_view.sql",
  "node_modules/skitch-ext-verify/skitch-ext-verify.control",
  "node_modules/skitch-ext-verify/sqitch.conf",
  "node_modules/skitch-ext-verify/sqitch.plan",
  "node_modules/skitch-ext-verify/sql",
  "node_modules/skitch-ext-verify/sql/skitch-ext-verify--0.0.1.sql",
  "node_modules/skitch-ext-verify/verify",
  "node_modules/skitch-ext-verify/verify/procedures",
  "node_modules/skitch-ext-verify/verify/procedures/verify_constraint.sql",
  "node_modules/skitch-ext-verify/verify/procedures/verify_domain.sql",
  "node_modules/skitch-ext-verify/verify/procedures/verify_extension.sql",
  "node_modules/skitch-ext-verify/verify/procedures/verify_function.sql",
  "node_modules/skitch-ext-verify/verify/procedures/verify_index.sql",
  "node_modules/skitch-ext-verify/verify/procedures/verify_membership.sql",
  "node_modules/skitch-ext-verify/verify/procedures/verify_policy.sql",
  "node_modules/skitch-ext-verify/verify/procedures/verify_role.sql",
  "node_modules/skitch-ext-verify/verify/procedures/verify_schema.sql",
  "node_modules/skitch-ext-verify/verify/procedures/verify_security.sql",
  "node_modules/skitch-ext-verify/verify/procedures/verify_table_grant.sql",
  "node_modules/skitch-ext-verify/verify/procedures/verify_table.sql",
  "node_modules/skitch-ext-verify/verify/procedures/verify_trigger.sql",
  "node_modules/skitch-ext-verify/verify/procedures/verify_type.sql",
  "node_modules/skitch-ext-verify/verify/procedures/verify_view.sql",
  "package-lock.json",
  "packages",
  "packages/install.sh",
  "readme.md",
  "skitch.json",
]
`;

exports[`installs skitch path sqitch install twice 1`] = `
Array [
  "deploy",
  "Makefile",
  "myproject.control",
  "package.json",
  "revert",
  "sqitch.conf",
  "sqitch.plan",
  "sql",
  "test",
  "test/utils",
  "test/utils/index.js",
  "verify",
]
`;

exports[`installs skitch path sqitch install twice 2`] = `
Array [
  "bootstrap-roles.sql",
  "docker-compose.yml",
  "Makefile",
  "myproject",
  "myproject/deploy",
  "myproject/Makefile",
  "myproject/myproject.control",
  "myproject/package.json",
  "myproject/revert",
  "myproject/sqitch.conf",
  "myproject/sqitch.plan",
  "myproject/sql",
  "myproject/test",
  "myproject/test/utils",
  "myproject/test/utils/index.js",
  "myproject/verify",
  "node_modules",
  "node_modules/skitch-ext-verify",
  "node_modules/skitch-ext-verify/deploy",
  "node_modules/skitch-ext-verify/deploy/procedures",
  "node_modules/skitch-ext-verify/deploy/procedures/verify_constraint.sql",
  "node_modules/skitch-ext-verify/deploy/procedures/verify_domain.sql",
  "node_modules/skitch-ext-verify/deploy/procedures/verify_extension.sql",
  "node_modules/skitch-ext-verify/deploy/procedures/verify_function.sql",
  "node_modules/skitch-ext-verify/deploy/procedures/verify_index.sql",
  "node_modules/skitch-ext-verify/deploy/procedures/verify_membership.sql",
  "node_modules/skitch-ext-verify/deploy/procedures/verify_policy.sql",
  "node_modules/skitch-ext-verify/deploy/procedures/verify_role.sql",
  "node_modules/skitch-ext-verify/deploy/procedures/verify_schema.sql",
  "node_modules/skitch-ext-verify/deploy/procedures/verify_security.sql",
  "node_modules/skitch-ext-verify/deploy/procedures/verify_table_grant.sql",
  "node_modules/skitch-ext-verify/deploy/procedures/verify_table.sql",
  "node_modules/skitch-ext-verify/deploy/procedures/verify_trigger.sql",
  "node_modules/skitch-ext-verify/deploy/procedures/verify_type.sql",
  "node_modules/skitch-ext-verify/deploy/procedures/verify_view.sql",
  "node_modules/skitch-ext-verify/Makefile",
  "node_modules/skitch-ext-verify/package.json",
  "node_modules/skitch-ext-verify/revert",
  "node_modules/skitch-ext-verify/revert/procedures",
  "node_modules/skitch-ext-verify/revert/procedures/verify_constraint.sql",
  "node_modules/skitch-ext-verify/revert/procedures/verify_domain.sql",
  "node_modules/skitch-ext-verify/revert/procedures/verify_extension.sql",
  "node_modules/skitch-ext-verify/revert/procedures/verify_function.sql",
  "node_modules/skitch-ext-verify/revert/procedures/verify_index.sql",
  "node_modules/skitch-ext-verify/revert/procedures/verify_membership.sql",
  "node_modules/skitch-ext-verify/revert/procedures/verify_policy.sql",
  "node_modules/skitch-ext-verify/revert/procedures/verify_role.sql",
  "node_modules/skitch-ext-verify/revert/procedures/verify_schema.sql",
  "node_modules/skitch-ext-verify/revert/procedures/verify_security.sql",
  "node_modules/skitch-ext-verify/revert/procedures/verify_table_grant.sql",
  "node_modules/skitch-ext-verify/revert/procedures/verify_table.sql",
  "node_modules/skitch-ext-verify/revert/procedures/verify_trigger.sql",
  "node_modules/skitch-ext-verify/revert/procedures/verify_type.sql",
  "node_modules/skitch-ext-verify/revert/procedures/verify_view.sql",
  "node_modules/skitch-ext-verify/skitch-ext-verify.control",
  "node_modules/skitch-ext-verify/sqitch.conf",
  "node_modules/skitch-ext-verify/sqitch.plan",
  "node_modules/skitch-ext-verify/sql",
  "node_modules/skitch-ext-verify/sql/skitch-ext-verify--0.0.1.sql",
  "node_modules/skitch-ext-verify/verify",
  "node_modules/skitch-ext-verify/verify/procedures",
  "node_modules/skitch-ext-verify/verify/procedures/verify_constraint.sql",
  "node_modules/skitch-ext-verify/verify/procedures/verify_domain.sql",
  "node_modules/skitch-ext-verify/verify/procedures/verify_extension.sql",
  "node_modules/skitch-ext-verify/verify/procedures/verify_function.sql",
  "node_modules/skitch-ext-verify/verify/procedures/verify_index.sql",
  "node_modules/skitch-ext-verify/verify/procedures/verify_membership.sql",
  "node_modules/skitch-ext-verify/verify/procedures/verify_policy.sql",
  "node_modules/skitch-ext-verify/verify/procedures/verify_role.sql",
  "node_modules/skitch-ext-verify/verify/procedures/verify_schema.sql",
  "node_modules/skitch-ext-verify/verify/procedures/verify_security.sql",
  "node_modules/skitch-ext-verify/verify/procedures/verify_table_grant.sql",
  "node_modules/skitch-ext-verify/verify/procedures/verify_table.sql",
  "node_modules/skitch-ext-verify/verify/procedures/verify_trigger.sql",
  "node_modules/skitch-ext-verify/verify/procedures/verify_type.sql",
  "node_modules/skitch-ext-verify/verify/procedures/verify_view.sql",
  "package-lock.json",
  "packages",
  "packages/install.sh",
  "readme.md",
  "skitch.json",
]
`;

exports[`installs skitch path sqitch install twice 3`] = `
Array [
  "bootstrap-roles.sql",
  "docker-compose.yml",
  "Makefile",
  "myproject",
  "myproject/deploy",
  "myproject/Makefile",
  "myproject/myproject.control",
  "myproject/package.json",
  "myproject/revert",
  "myproject/sqitch.conf",
  "myproject/sqitch.plan",
  "myproject/sql",
  "myproject/test",
  "myproject/test/utils",
  "myproject/test/utils/index.js",
  "myproject/verify",
  "node_modules",
  "node_modules/skitch-ext-utilities",
  "node_modules/skitch-ext-utilities/deploy",
  "node_modules/skitch-ext-utilities/deploy/procedures",
  "node_modules/skitch-ext-utilities/deploy/procedures/drop_function.sql",
  "node_modules/skitch-ext-utilities/deploy/procedures/get_entity_from_str.sql",
  "node_modules/skitch-ext-utilities/deploy/procedures/get_schema_from_str.sql",
  "node_modules/skitch-ext-utilities/deploy/procedures/grant_execute_on_function.sql",
  "node_modules/skitch-ext-utilities/deploy/procedures/list_indexes.sql",
  "node_modules/skitch-ext-utilities/deploy/procedures/list_memberships.sql",
  "node_modules/skitch-ext-utilities/deploy/procedures/revoke_execute_on_function.sql",
  "node_modules/skitch-ext-utilities/deploy/procedures/tg_update_timestamps.sql",
  "node_modules/skitch-ext-utilities/Makefile",
  "node_modules/skitch-ext-utilities/package.json",
  "node_modules/skitch-ext-utilities/revert",
  "node_modules/skitch-ext-utilities/revert/procedures",
  "node_modules/skitch-ext-utilities/revert/procedures/drop_function.sql",
  "node_modules/skitch-ext-utilities/revert/procedures/get_entity_from_str.sql",
  "node_modules/skitch-ext-utilities/revert/procedures/get_schema_from_str.sql",
  "node_modules/skitch-ext-utilities/revert/procedures/grant_execute_on_function.sql",
  "node_modules/skitch-ext-utilities/revert/procedures/list_indexes.sql",
  "node_modules/skitch-ext-utilities/revert/procedures/list_memberships.sql",
  "node_modules/skitch-ext-utilities/revert/procedures/revoke_execute_on_function.sql",
  "node_modules/skitch-ext-utilities/revert/procedures/tg_update_timestamps.sql",
  "node_modules/skitch-ext-utilities/skitch-ext-utilities.control",
  "node_modules/skitch-ext-utilities/sqitch.conf",
  "node_modules/skitch-ext-utilities/sqitch.plan",
  "node_modules/skitch-ext-utilities/sql",
  "node_modules/skitch-ext-utilities/sql/skitch-ext-utilities--0.0.1.sql",
  "node_modules/skitch-ext-utilities/verify",
  "node_modules/skitch-ext-utilities/verify/procedures",
  "node_modules/skitch-ext-utilities/verify/procedures/drop_function.sql",
  "node_modules/skitch-ext-utilities/verify/procedures/get_entity_from_str.sql",
  "node_modules/skitch-ext-utilities/verify/procedures/get_schema_from_str.sql",
  "node_modules/skitch-ext-utilities/verify/procedures/grant_execute_on_function.sql",
  "node_modules/skitch-ext-utilities/verify/procedures/list_indexes.sql",
  "node_modules/skitch-ext-utilities/verify/procedures/list_memberships.sql",
  "node_modules/skitch-ext-utilities/verify/procedures/revoke_execute_on_function.sql",
  "node_modules/skitch-ext-utilities/verify/procedures/tg_update_timestamps.sql",
  "node_modules/skitch-ext-verify",
  "node_modules/skitch-ext-verify/deploy",
  "node_modules/skitch-ext-verify/deploy/procedures",
  "node_modules/skitch-ext-verify/deploy/procedures/verify_constraint.sql",
  "node_modules/skitch-ext-verify/deploy/procedures/verify_domain.sql",
  "node_modules/skitch-ext-verify/deploy/procedures/verify_extension.sql",
  "node_modules/skitch-ext-verify/deploy/procedures/verify_function.sql",
  "node_modules/skitch-ext-verify/deploy/procedures/verify_index.sql",
  "node_modules/skitch-ext-verify/deploy/procedures/verify_membership.sql",
  "node_modules/skitch-ext-verify/deploy/procedures/verify_policy.sql",
  "node_modules/skitch-ext-verify/deploy/procedures/verify_role.sql",
  "node_modules/skitch-ext-verify/deploy/procedures/verify_schema.sql",
  "node_modules/skitch-ext-verify/deploy/procedures/verify_security.sql",
  "node_modules/skitch-ext-verify/deploy/procedures/verify_table_grant.sql",
  "node_modules/skitch-ext-verify/deploy/procedures/verify_table.sql",
  "node_modules/skitch-ext-verify/deploy/procedures/verify_trigger.sql",
  "node_modules/skitch-ext-verify/deploy/procedures/verify_type.sql",
  "node_modules/skitch-ext-verify/deploy/procedures/verify_view.sql",
  "node_modules/skitch-ext-verify/Makefile",
  "node_modules/skitch-ext-verify/package.json",
  "node_modules/skitch-ext-verify/revert",
  "node_modules/skitch-ext-verify/revert/procedures",
  "node_modules/skitch-ext-verify/revert/procedures/verify_constraint.sql",
  "node_modules/skitch-ext-verify/revert/procedures/verify_domain.sql",
  "node_modules/skitch-ext-verify/revert/procedures/verify_extension.sql",
  "node_modules/skitch-ext-verify/revert/procedures/verify_function.sql",
  "node_modules/skitch-ext-verify/revert/procedures/verify_index.sql",
  "node_modules/skitch-ext-verify/revert/procedures/verify_membership.sql",
  "node_modules/skitch-ext-verify/revert/procedures/verify_policy.sql",
  "node_modules/skitch-ext-verify/revert/procedures/verify_role.sql",
  "node_modules/skitch-ext-verify/revert/procedures/verify_schema.sql",
  "node_modules/skitch-ext-verify/revert/procedures/verify_security.sql",
  "node_modules/skitch-ext-verify/revert/procedures/verify_table_grant.sql",
  "node_modules/skitch-ext-verify/revert/procedures/verify_table.sql",
  "node_modules/skitch-ext-verify/revert/procedures/verify_trigger.sql",
  "node_modules/skitch-ext-verify/revert/procedures/verify_type.sql",
  "node_modules/skitch-ext-verify/revert/procedures/verify_view.sql",
  "node_modules/skitch-ext-verify/skitch-ext-verify.control",
  "node_modules/skitch-ext-verify/sqitch.conf",
  "node_modules/skitch-ext-verify/sqitch.plan",
  "node_modules/skitch-ext-verify/sql",
  "node_modules/skitch-ext-verify/sql/skitch-ext-verify--0.0.1.sql",
  "node_modules/skitch-ext-verify/verify",
  "node_modules/skitch-ext-verify/verify/procedures",
  "node_modules/skitch-ext-verify/verify/procedures/verify_constraint.sql",
  "node_modules/skitch-ext-verify/verify/procedures/verify_domain.sql",
  "node_modules/skitch-ext-verify/verify/procedures/verify_extension.sql",
  "node_modules/skitch-ext-verify/verify/procedures/verify_function.sql",
  "node_modules/skitch-ext-verify/verify/procedures/verify_index.sql",
  "node_modules/skitch-ext-verify/verify/procedures/verify_membership.sql",
  "node_modules/skitch-ext-verify/verify/procedures/verify_policy.sql",
  "node_modules/skitch-ext-verify/verify/procedures/verify_role.sql",
  "node_modules/skitch-ext-verify/verify/procedures/verify_schema.sql",
  "node_modules/skitch-ext-verify/verify/procedures/verify_security.sql",
  "node_modules/skitch-ext-verify/verify/procedures/verify_table_grant.sql",
  "node_modules/skitch-ext-verify/verify/procedures/verify_table.sql",
  "node_modules/skitch-ext-verify/verify/procedures/verify_trigger.sql",
  "node_modules/skitch-ext-verify/verify/procedures/verify_type.sql",
  "node_modules/skitch-ext-verify/verify/procedures/verify_view.sql",
  "package-lock.json",
  "packages",
  "packages/install.sh",
  "readme.md",
  "skitch.json",
]
`;

exports[`installs skitch path sqitch install twice 4`] = `
Array [
  "bootstrap-roles.sql",
  "docker-compose.yml",
  "Makefile",
  "myproject",
  "myproject/deploy",
  "myproject/Makefile",
  "myproject/myproject.control",
  "myproject/package.json",
  "myproject/revert",
  "myproject/sqitch.conf",
  "myproject/sqitch.plan",
  "myproject/sql",
  "myproject/test",
  "myproject/test/utils",
  "myproject/test/utils/index.js",
  "myproject/verify",
  "node_modules",
  "node_modules/skitch-ext-defaults",
  "node_modules/skitch-ext-defaults/deploy",
  "node_modules/skitch-ext-defaults/deploy/roles",
  "node_modules/skitch-ext-defaults/deploy/roles/administrator",
  "node_modules/skitch-ext-defaults/deploy/roles/administrator/role.sql",
  "node_modules/skitch-ext-defaults/deploy/roles/anonymous",
  "node_modules/skitch-ext-defaults/deploy/roles/anonymous/role.sql",
  "node_modules/skitch-ext-defaults/deploy/roles/authenticated",
  "node_modules/skitch-ext-defaults/deploy/roles/authenticated/role.sql",
  "node_modules/skitch-ext-defaults/Makefile",
  "node_modules/skitch-ext-defaults/package.json",
  "node_modules/skitch-ext-defaults/revert",
  "node_modules/skitch-ext-defaults/revert/roles",
  "node_modules/skitch-ext-defaults/revert/roles/administrator",
  "node_modules/skitch-ext-defaults/revert/roles/administrator/role.sql",
  "node_modules/skitch-ext-defaults/revert/roles/anonymous",
  "node_modules/skitch-ext-defaults/revert/roles/anonymous/role.sql",
  "node_modules/skitch-ext-defaults/revert/roles/authenticated",
  "node_modules/skitch-ext-defaults/revert/roles/authenticated/role.sql",
  "node_modules/skitch-ext-defaults/skitch-ext-defaults.control",
  "node_modules/skitch-ext-defaults/sqitch.conf",
  "node_modules/skitch-ext-defaults/sqitch.plan",
  "node_modules/skitch-ext-defaults/sql",
  "node_modules/skitch-ext-defaults/sql/skitch-ext-defaults--0.0.1.sql",
  "node_modules/skitch-ext-defaults/verify",
  "node_modules/skitch-ext-defaults/verify/roles",
  "node_modules/skitch-ext-defaults/verify/roles/administrator",
  "node_modules/skitch-ext-defaults/verify/roles/administrator/role.sql",
  "node_modules/skitch-ext-defaults/verify/roles/anonymous",
  "node_modules/skitch-ext-defaults/verify/roles/anonymous/role.sql",
  "node_modules/skitch-ext-defaults/verify/roles/authenticated",
  "node_modules/skitch-ext-defaults/verify/roles/authenticated/role.sql",
  "node_modules/skitch-ext-utilities",
  "node_modules/skitch-ext-utilities/deploy",
  "node_modules/skitch-ext-utilities/deploy/procedures",
  "node_modules/skitch-ext-utilities/deploy/procedures/drop_function.sql",
  "node_modules/skitch-ext-utilities/deploy/procedures/get_entity_from_str.sql",
  "node_modules/skitch-ext-utilities/deploy/procedures/get_schema_from_str.sql",
  "node_modules/skitch-ext-utilities/deploy/procedures/grant_execute_on_function.sql",
  "node_modules/skitch-ext-utilities/deploy/procedures/list_indexes.sql",
  "node_modules/skitch-ext-utilities/deploy/procedures/list_memberships.sql",
  "node_modules/skitch-ext-utilities/deploy/procedures/revoke_execute_on_function.sql",
  "node_modules/skitch-ext-utilities/deploy/procedures/tg_update_timestamps.sql",
  "node_modules/skitch-ext-utilities/Makefile",
  "node_modules/skitch-ext-utilities/package.json",
  "node_modules/skitch-ext-utilities/revert",
  "node_modules/skitch-ext-utilities/revert/procedures",
  "node_modules/skitch-ext-utilities/revert/procedures/drop_function.sql",
  "node_modules/skitch-ext-utilities/revert/procedures/get_entity_from_str.sql",
  "node_modules/skitch-ext-utilities/revert/procedures/get_schema_from_str.sql",
  "node_modules/skitch-ext-utilities/revert/procedures/grant_execute_on_function.sql",
  "node_modules/skitch-ext-utilities/revert/procedures/list_indexes.sql",
  "node_modules/skitch-ext-utilities/revert/procedures/list_memberships.sql",
  "node_modules/skitch-ext-utilities/revert/procedures/revoke_execute_on_function.sql",
  "node_modules/skitch-ext-utilities/revert/procedures/tg_update_timestamps.sql",
  "node_modules/skitch-ext-utilities/skitch-ext-utilities.control",
  "node_modules/skitch-ext-utilities/sqitch.conf",
  "node_modules/skitch-ext-utilities/sqitch.plan",
  "node_modules/skitch-ext-utilities/sql",
  "node_modules/skitch-ext-utilities/sql/skitch-ext-utilities--0.0.1.sql",
  "node_modules/skitch-ext-utilities/verify",
  "node_modules/skitch-ext-utilities/verify/procedures",
  "node_modules/skitch-ext-utilities/verify/procedures/drop_function.sql",
  "node_modules/skitch-ext-utilities/verify/procedures/get_entity_from_str.sql",
  "node_modules/skitch-ext-utilities/verify/procedures/get_schema_from_str.sql",
  "node_modules/skitch-ext-utilities/verify/procedures/grant_execute_on_function.sql",
  "node_modules/skitch-ext-utilities/verify/procedures/list_indexes.sql",
  "node_modules/skitch-ext-utilities/verify/procedures/list_memberships.sql",
  "node_modules/skitch-ext-utilities/verify/procedures/revoke_execute_on_function.sql",
  "node_modules/skitch-ext-utilities/verify/procedures/tg_update_timestamps.sql",
  "node_modules/skitch-ext-verify",
  "node_modules/skitch-ext-verify/deploy",
  "node_modules/skitch-ext-verify/deploy/procedures",
  "node_modules/skitch-ext-verify/deploy/procedures/verify_constraint.sql",
  "node_modules/skitch-ext-verify/deploy/procedures/verify_domain.sql",
  "node_modules/skitch-ext-verify/deploy/procedures/verify_extension.sql",
  "node_modules/skitch-ext-verify/deploy/procedures/verify_function.sql",
  "node_modules/skitch-ext-verify/deploy/procedures/verify_index.sql",
  "node_modules/skitch-ext-verify/deploy/procedures/verify_membership.sql",
  "node_modules/skitch-ext-verify/deploy/procedures/verify_policy.sql",
  "node_modules/skitch-ext-verify/deploy/procedures/verify_role.sql",
  "node_modules/skitch-ext-verify/deploy/procedures/verify_schema.sql",
  "node_modules/skitch-ext-verify/deploy/procedures/verify_security.sql",
  "node_modules/skitch-ext-verify/deploy/procedures/verify_table_grant.sql",
  "node_modules/skitch-ext-verify/deploy/procedures/verify_table.sql",
  "node_modules/skitch-ext-verify/deploy/procedures/verify_trigger.sql",
  "node_modules/skitch-ext-verify/deploy/procedures/verify_type.sql",
  "node_modules/skitch-ext-verify/deploy/procedures/verify_view.sql",
  "node_modules/skitch-ext-verify/Makefile",
  "node_modules/skitch-ext-verify/package.json",
  "node_modules/skitch-ext-verify/revert",
  "node_modules/skitch-ext-verify/revert/procedures",
  "node_modules/skitch-ext-verify/revert/procedures/verify_constraint.sql",
  "node_modules/skitch-ext-verify/revert/procedures/verify_domain.sql",
  "node_modules/skitch-ext-verify/revert/procedures/verify_extension.sql",
  "node_modules/skitch-ext-verify/revert/procedures/verify_function.sql",
  "node_modules/skitch-ext-verify/revert/procedures/verify_index.sql",
  "node_modules/skitch-ext-verify/revert/procedures/verify_membership.sql",
  "node_modules/skitch-ext-verify/revert/procedures/verify_policy.sql",
  "node_modules/skitch-ext-verify/revert/procedures/verify_role.sql",
  "node_modules/skitch-ext-verify/revert/procedures/verify_schema.sql",
  "node_modules/skitch-ext-verify/revert/procedures/verify_security.sql",
  "node_modules/skitch-ext-verify/revert/procedures/verify_table_grant.sql",
  "node_modules/skitch-ext-verify/revert/procedures/verify_table.sql",
  "node_modules/skitch-ext-verify/revert/procedures/verify_trigger.sql",
  "node_modules/skitch-ext-verify/revert/procedures/verify_type.sql",
  "node_modules/skitch-ext-verify/revert/procedures/verify_view.sql",
  "node_modules/skitch-ext-verify/skitch-ext-verify.control",
  "node_modules/skitch-ext-verify/sqitch.conf",
  "node_modules/skitch-ext-verify/sqitch.plan",
  "node_modules/skitch-ext-verify/sql",
  "node_modules/skitch-ext-verify/sql/skitch-ext-verify--0.0.1.sql",
  "node_modules/skitch-ext-verify/verify",
  "node_modules/skitch-ext-verify/verify/procedures",
  "node_modules/skitch-ext-verify/verify/procedures/verify_constraint.sql",
  "node_modules/skitch-ext-verify/verify/procedures/verify_domain.sql",
  "node_modules/skitch-ext-verify/verify/procedures/verify_extension.sql",
  "node_modules/skitch-ext-verify/verify/procedures/verify_function.sql",
  "node_modules/skitch-ext-verify/verify/procedures/verify_index.sql",
  "node_modules/skitch-ext-verify/verify/procedures/verify_membership.sql",
  "node_modules/skitch-ext-verify/verify/procedures/verify_policy.sql",
  "node_modules/skitch-ext-verify/verify/procedures/verify_role.sql",
  "node_modules/skitch-ext-verify/verify/procedures/verify_schema.sql",
  "node_modules/skitch-ext-verify/verify/procedures/verify_security.sql",
  "node_modules/skitch-ext-verify/verify/procedures/verify_table_grant.sql",
  "node_modules/skitch-ext-verify/verify/procedures/verify_table.sql",
  "node_modules/skitch-ext-verify/verify/procedures/verify_trigger.sql",
  "node_modules/skitch-ext-verify/verify/procedures/verify_type.sql",
  "node_modules/skitch-ext-verify/verify/procedures/verify_view.sql",
  "package-lock.json",
  "packages",
  "packages/install.sh",
  "readme.md",
  "skitch.json",
]
`;
